// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots atoms/Dot Initial 1`] = `
<div
  className="sc-AxirZ dprqqr"
  size={12}
/>
`;

exports[`Storyshots atoms/Input Default 1`] = `
<input
  className="sc-AxhUy elqOWF"
  onChange={[Function]}
  value=""
/>
`;

exports[`Storyshots atoms/Input With Text 1`] = `
<input
  autoFocus={true}
  className="sc-AxhUy elqOWF"
  onChange={[Function]}
  value="all-cats"
/>
`;

exports[`Storyshots atoms/RoundedSquare Initial 1`] = `
<div
  className="sc-AxjAm iGwRzr"
  onClick={[Function]}
  size={64}
/>
`;

exports[`Storyshots organisms/Dice Initial 1`] = `
<div
  className="sc-AxjAm gexqjG"
  size={64}
>
  <div
    className="sc-AxhCb kA-DoOT"
  >
    <div
      className="sc-AxirZ sc-AxiKw jGLEmH"
      size={12}
    />
    <div
      className="sc-AxirZ sc-AxiKw jGLEmH"
      size={12}
    />
    <div
      className="sc-AxirZ sc-AxiKw jGLEmH"
      size={12}
    />
    <div
      className="sc-AxirZ sc-AxiKw jGLEmH"
      size={12}
    />
    <div
      className="sc-AxirZ sc-AxiKw jGLEmH"
      size={12}
    />
    <div
      className="sc-AxirZ sc-AxiKw jGLEmH"
      size={12}
    />
  </div>
</div>
`;
